--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   "author": "EWC",
   "license": "MIT",
   "dependencies": {
-    "axios": "^0.21.1",
+    "@paypal/paypal-js": "^5.1.1",
+    "@paypal/react-paypal-js": "^7.8.1",
     "bcrypt": "^5.0.0",
     "bootstrap": "^4.6.0",
     "compression": "^1.7.3",
@@ -39,7 +40,7 @@
     "@babel/core": "^7.12.10",
     "@babel/preset-react": "^7.12.10",
     "@babel/register": "^7.12.10",
-    "axios": "^0.21.1",
+    "axios": "^0.21.4",
     "axios-mock-adapter": "^1.16.0",
     "babel-loader": "^8.2.2",
     "chai": "^4.2.0",
